--- a/master en react/07-rutas/src/index.css
+++ b/master en react/07-rutas/src/index.css
@@ -11,3 +11,11 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+.activado{
+  font-weight: bold;
+  font-size: 18px;;
+  color: rgb(13, 73, 111);
+  text-decoration: none;
+  
+}
