--- a/master en react/08-proyecto2/src/index.css
+++ b/master en react/08-proyecto2/src/index.css
@@ -11,3 +11,50 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+.layout{
+  width: 85%;
+  margin: 0 auto;
+
+}
+
+.header{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  list-style: none;
+  height: 132px;
+  
+}
+
+.header .logo{
+  flex-grow: 2;
+}
+
+.header nav{
+  flex-grow: 1;
+  display: flex;
+  justify-content: flex-end;
+  align-items: center;
+  
+}
+
+.header nav ul{
+  list-style: none;
+}
+
+.header li {
+  text-transform: uppercase;
+  font-weight: bold;
+  font-size: 17px;
+}
+
+.header li a {
+  color: black;
+  text-decoration: none;
+  transition: all 300ms;
+}
+
+.header li a:hover{
+  color: #fa4539;
+}
