--- a/master en react/08-proyecto2/src/index.css
+++ b/master en react/08-proyecto2/src/index.css
@@ -24,11 +24,27 @@ code {
   align-items: center;
   list-style: none;
   height: 132px;
-  
+  border-bottom: 3px solid black;
+  margin-bottom: 35px;
 }
 
 .header .logo{
   flex-grow: 2;
+  display: flex;
+}
+
+.header .logo span{
+  display: block;
+  font-size: 60px;
+  font-weight: bolder;
+  margin-top: 1px;
+}
+
+.header .logo h3 {
+  display: block;
+  flex-basis: 40px;
+  margin-left: 10px;
+  text-transform: uppercase;
 }
 
 .header nav{
@@ -57,4 +73,20 @@ code {
 
 .header li a:hover{
   color: #fa4539;
+}
+
+.content{
+  min-height: 500px;
+}
+
+.footer{
+  min-height: 150px;
+  line-height: 120px;
+  text-align: center;
+  font-size: 14px;
+  margin-top: 35px;
+  padding-top: 45px;
+  border-top: 3px solid black;
+  background: #f5f5f5;
+  color: #444;
 }
