Los enlaces del menú se marcan como activados usando Navlink

--- a/master en react/08-proyecto2/src/index.css
+++ b/master en react/08-proyecto2/src/index.css
@@ -71,9 +71,12 @@ code {
   transition: all 300ms;
 }
 
+.header .active,
 .header li a:hover{
   color: #fa4539;
 }
+
+
 
 .content{
   min-height: 500px;
