--- a/master en react/08-proyecto2/src/index.css
+++ b/master en react/08-proyecto2/src/index.css
@@ -83,8 +83,8 @@ code {
 }
 
 .footer{
-  min-height: 150px;
-  line-height: 120px;
+  min-height: 40px;
+  line-height: 7px;
   text-align: center;
   font-size: 14px;
   margin-top: 35px;
@@ -92,4 +92,77 @@ code {
   border-top: 3px solid black;
   background: #f5f5f5;
   color: #444;
+}
+
+.home h1{
+  font-family: Georgia, 'Times New Roman', Times, serif;
+  font-weight: 400;
+  font-size: 60px;
+  margin-bottom: 0px;
+  margin-top: 80px;
+}
+
+.home strong{
+  color: #fa4539;
+}
+
+.home h2{
+  color: rgb (98, 97, 97);
+  font-weight: lighter;
+
+}
+
+.home a,
+input[type="submit"],
+button{
+  padding: 10px;
+  border-radius: 5px;
+  color: white;
+  background-color: #fa4539;
+  text-decoration: none;
+  transition: all 300ms;
+}
+ 
+.home a:hover,
+input[type="submit"]:hover,
+button:hover{
+  background-color:#0791b3;
+}
+
+.page .heading,
+.home .heading{
+  font-size: 25px;
+  font-weight: 500;
+  color: black;
+  margin-bottom: 0px;
+}
+
+.page .heading{
+  font-size: 55px;
+  font-weight: bold;
+}
+
+.home p{
+  color: (98, 97, 97);
+}
+
+input[type="text"],
+textarea{
+  display: block;
+  padding: 15px;
+  margin-top: 22px;
+  width: 250px;
+}
+
+input[type="submit"],
+button{
+  font-size: 15px;
+  padding: 15px;
+  margin-top: 15px;
+  border: 0px;
+  border-radius: 5px;
+  color: white;
+  background-color: #fa4539;
+  text-decoration: none;
+  transition: all 300ms;
 }
