--- a/master en react/08-proyecto2/src/index.css
+++ b/master en react/08-proyecto2/src/index.css
@@ -166,3 +166,66 @@ button{
   text-decoration: none;
   transition: all 300ms;
 }
+
+.works{
+  display:flex;
+  flex-wrap: wrap;
+}
+
+.work-item{
+  flex-basis: 30%;
+  flex-grow: 1;
+
+  margin: 30px;
+}
+ 
+
+.work-item .mask{
+  width: 100%;
+  height: 250px;
+  overflow: hidden;
+  border: 1px solid #ddd;
+  box-shadow: 0px 5px 15px #ddd;
+}
+
+.work-item .mask:hover img{
+  width: 150%;
+  margin-right: 30%;
+}
+
+.work-item img{
+  width: 120%;
+  transition: all;
+}
+
+.work-item span{
+  color: grey;
+  margin-top: 35px;
+  display: block;
+}
+
+.work-item h2{
+  display: block;
+  color:black;
+  margin-top: 5px;
+  margin-bottom: 5px;
+  font-size: 30px;
+}
+
+.work-item a {
+  color: black;
+  text-decoration: none;
+  transition: all 600ms;
+}
+
+.work-item a:hover {
+  color: #fa4539
+}
+
+.work-item h3{
+  display: block;
+  margin-top: 0px;
+  color: grey;
+
+}
+
