template para ejemplo de useMemo

--- a/master en react/10-memorizacion/src/App.css
+++ b/master en react/10-memorizacion/src/App.css
@@ -37,7 +37,29 @@
   }
 }
 
+.tareas-container{
+  width: 80%;
+}
+
 input[type = "text"]{
   padding: 20px;
   width: 50%;
+}
+
+input[type = "submit"]{
+  padding: 22px;
+  width: 25%;
+  background: green;
+  color: white;
+  font-weight: bold;
+  border: none;
+  border-radius: 5px;
+  margin-left: 10px;
+  cursor: pointer;
+  opacity: 0.8;
+}
+
+
+input[type = "submit"]:hover{
+  opacity: 1;
 }
